# coffee_dialer

./: .gitignore  CMakeLists.txt  README.md
src/: db.cpp  db.h  main.cpp  model.h  notes.cpp
